--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <title>Omnifood</title>
     <!-- reset css default -->
     <link rel="stylesheet" href="./css/normalize.css" />
-    <link rel="stylesheet" href="./css/general.css">
+    <link rel="stylesheet" href="./css/general.css" />
     <link rel="stylesheet" href="./css/style.css" />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/query-media.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"
@@ -20,21 +23,32 @@
       nomodule=""
       src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"
     ></script>
-
+    <script src="./js/script.js" defer></script>
   </head>
   <body>
     <header class="header">
-      <img src="./img/omnifood-logo.png" alt="logo" class="logo" />
+      <a href="#">
+        <img
+          class="logo-food"
+          alt="Omnifood logo"
+          src="img/omnifood-logo.png"
+        />
+      </a>
+
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#how">How it works</a></li>
-          <li><a class="main-nav-link" href="#meals">Meals</a></li>
-          <li>
-            <a class="main-nav-link" href="#testimonials">Testimonials</a>
-          </li>
-          <li><a class="main-nav-link" href="#pricing">Pricing</a></li>
-          <li><a class="main-nav-link nav-cta" href="#cta">Try for free</a></li>
+          <li><a class="main-nav-link" href="#">How it works</a></li>
+          <li><a class="main-nav-link" href="#">Meals</a></li>
+          <li><a class="main-nav-link" href="#">Testimonials</a></li>
+          <li><a class="main-nav-link" href="#">Pricing</a></li>
+          <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
+        </ul>
       </nav>
+
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
     </header>
     <main>
       <section class="section-hero">
@@ -54,23 +68,23 @@
             <a href="#" class="btn btn--outline">Learn more &darr;</a>
             <div class="delivered-meals">
               <div class="delivered-imgs">
-                <img src="./img/customers/customer-1.jpg" alt="" />
-                <img src="./img/customers/customer-2.jpg" alt="" />
-                <img src="./img/customers/customer-3.jpg" alt="" />
-                <img src="./img/customers/customer-4.jpg" alt="" />
-                <img src="./img/customers/customer-5.jpg" alt="" />
-                <img src="./img/customers/customer-6.jpg" alt="" />
+                <img src="img/customers/customer-1.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-2.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-3.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-4.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-5.jpg" alt="Customer photo" />
+                <img src="img/customers/customer-6.jpg" alt="Customer photo" />
               </div>
               <p class="delivered-text">
-                <span>250,000+ </span>meals delivered last year!
+                <span>250,000+</span> meals delivered last year!
               </p>
             </div>
           </div>
           <div class="hero-img-box">
             <img
-              src="./img/hero.png"
-              alt="Woman enjoying food"
+              src="img/hero.png"
               class="hero-img"
+              alt="Woman enjoying food, meals in storage container, and food bowls on a table"
             />
           </div>
         </div>
@@ -78,54 +92,66 @@
       <section class="section-featured">
         <div class="container">
           <h2 class="heading-featured-in">As featured in</h2>
-          <div class="logo">
-            <img src="./img/logos/business-insider.png" alt="">
-            <img src="./img/logos/forbes.png" alt="">
-            <img src="./img/logos/techcrunch.png" alt="">
-            <img src="./img/logos/the-new-york-times.png" alt="">
-            <img src="./img/logos/usa-today.png" alt="">
+          <div class="logos">
+            <img src="./img/logos/business-insider.png" alt="" />
+            <img src="./img/logos/forbes.png" alt="" />
+            <img src="./img/logos/techcrunch.png" alt="" />
+            <img src="./img/logos/the-new-york-times.png" alt="" />
+            <img src="./img/logos/usa-today.png" alt="" />
           </div>
         </div>
       </section>
-      <section class="section-how">
+      <section class="section-how" id="how">
         <div class="container">
           <span class="subheading">How it works</span>
-          <h2 class="heading-secondary">Your daily dose of health in 3 simple steps</h2>
+          <h2 class="heading-secondary">
+            Your daily dose of health in 3 simple steps
+          </h2>
         </div>
         <div class="container grid grid--2--cols grid-center-v">
           <!-- STEP 01 -->
           <div class="step-text-box">
             <p class="step-number">01</p>
-            <h3 class="heading-tertiary">Tell us what you like (and what not):</h3>
+            <h3 class="heading-tertiary">
+              Tell us what you like (and what not):
+            </h3>
             <p class="step-description">
-              Never again waste time thinking about what to eat! Omnifood AI will create a 100% personalized weekly meal plan just for you. It makes sure you get all the nutrients and vitamins you need, no matter what diet you follow!
+              Never again waste time thinking about what to eat! Omnifood AI
+              will create a 100% personalized weekly meal plan just for you. It
+              makes sure you get all the nutrients and vitamins you need, no
+              matter what diet you follow!
             </p>
           </div>
           <div class="step-img-box">
-            <img src="./img/app/app-screen-1.png" class="step-img" alt="">
+            <img src="./img/app/app-screen-1.png" class="step-img" alt="" />
           </div>
-          
+
           <!-- STEP 02 -->
           <div class="step-img-box">
-            <img src="./img/app/app-screen-2.png" class="step-img" alt="">
+            <img src="./img/app/app-screen-2.png" class="step-img" alt="" />
           </div>
           <div class="step-text-box">
             <p class="step-number">02</p>
             <h3 class="heading-tertiary">Approve your weekly meal plan:</h3>
             <p class="step-description">
-              Approve your weekly meal plan: Once per week, approve the meal plan generated for you by Omnifood AI. You can change ingredients, swap entire meals, or even add your own recipes.
+              Approve your weekly meal plan: Once per week, approve the meal
+              plan generated for you by Omnifood AI. You can change ingredients,
+              swap entire meals, or even add your own recipes.
             </p>
           </div>
           <!-- STEP 03 -->
           <div class="step-text-box">
             <p class="step-number">03</p>
-            <h3 class="heading-tertiary"> Receive meals at convenient time:</h3>
+            <h3 class="heading-tertiary">Receive meals at convenient time:</h3>
             <p class="step-description">
-              Receive meals at convenient time: Best chefs in town will cook your selected meal every day, and we will deliver it to your door whenever works best for you. You can change delivery schedule and address daily!
+              Receive meals at convenient time: Best chefs in town will cook
+              your selected meal every day, and we will deliver it to your door
+              whenever works best for you. You can change delivery schedule and
+              address daily!
             </p>
           </div>
           <div class="step-img-box">
-            <img src="./img/app/app-screen-3.png" class="step-img" alt="">
+            <img src="./img/app/app-screen-3.png" class="step-img" alt="" />
           </div>
         </div>
       </section>
@@ -396,7 +422,7 @@
           </figure>
         </div>
       </section>
-      
+
       <section class="section-pricing" id="pricing">
         <div class="container">
           <span class="subheading">Pricing</span>
@@ -571,7 +597,11 @@
       <div class="container grid grid--footer">
         <div class="logo-col">
           <a href="#" class="footer-logo">
-            <img class="logo" alt="Omnifood logo" src="img/omnifood-logo.png" />
+            <img
+              class="logo-food"
+              alt="Omnifood logo"
+              src="img/omnifood-logo.png"
+            />
           </a>
 
           <ul class="social-links">
@@ -593,8 +623,8 @@
           </ul>
 
           <p class="copyright">
-            Copyright &copy; <span class="year">2027</span> by Omnifood, Inc.
-            All rights reserved.
+            Copyright &copy; <span class="year"></span> by Omnifood, Inc. All
+            rights reserved.
           </p>
         </div>
 
