--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="./js/script.js" defer></script>
   </head>
   <body>
-    <header class="header">
+    <header class="header sticky">
       <a href="#">
         <img
           class="logo-food"
